added organic booking calculations

--- a/CB_api&clean_code.ipynb
+++ b/CB_api&clean_code.ipynb
@@ -1004,6 +1004,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Booking.com',\n",
+       " 'Website/Booking Engine',\n",
+       " 'Hostelworld',\n",
+       " 'Airbnb (API)',\n",
+       " 'Expedia',\n",
+       " 'HotelTonight',\n",
+       " 'Email',\n",
+       " 'Phone']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_values = expanded_df_past['source_name'].unique().tolist()\n",
+    "unique_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'Website/Booking Engine', 'Email', 'Phone' are the values you want to count\n",
+    "values_to_count = ['Website/Booking Engine', 'Email', 'Phone']\n",
+    "\n",
+    "# Create a new column with 1 for specified values and 0 otherwise, multiplied by 'adults'\n",
+    "expanded_df_past['count_column'] = (expanded_df_past['source_name'].isin(values_to_count)).astype(int) * expanded_df_past['adults']\n",
+    "\n",
+    "# Group by 'year', 'month', and 'day' and sum the 'count_column' and 'adults'\n",
+    "grouped_data_past = expanded_df_past.groupby(['year', 'month', 'day']).agg({'count_column': 'sum', 'adults': 'sum'})\n",
+    "\n",
+    "# Calculate the ratio by dividing 'count_column' by 'adults'\n",
+    "grouped_data_past['ratio'] = grouped_data_past['count_column'] / grouped_data_past['adults']\n",
+    "\n",
+    "# Pivot the DataFrame to have 'day' as columns, 'year' and 'month' as indices\n",
+    "pivot_table_past_book = grouped_data_past.pivot_table(index=['year', 'month'], columns='day', values='ratio', fill_value=0)\n",
+    "\n",
+    "# Create a new column with 1 for specified values and 0 otherwise, multiplied by 'adults'\n",
+    "expanded_df_future['count_column'] = (expanded_df_future['source_name'].isin(values_to_count)).astype(int) * expanded_df_future['adults']\n",
+    "\n",
+    "# Group by 'year', 'month', and 'day' and sum the 'count_column' and 'adults'\n",
+    "grouped_data_future = expanded_df_future.groupby(['year', 'month', 'day']).agg({'count_column': 'sum', 'adults': 'sum'})\n",
+    "\n",
+    "# Calculate the ratio by dividing 'count_column' by 'adults'\n",
+    "grouped_data_future['ratio'] = grouped_data_future['count_column'] / grouped_data_future['adults']\n",
+    "\n",
+    "# Pivot the DataFrame to have 'day' as columns, 'year' and 'month' as indices\n",
+    "pivot_table_future_book = grouped_data_future.pivot_table(index=['year', 'month'], columns='day', values='ratio', fill_value=0)\n",
+    "\n",
+    "\n",
+    "# Fill blank cells with 0 in the DataFrames\n",
+    "pivot_table_past_book.fillna(0, inplace=True)\n",
+    "pivot_table_future_book.fillna(0, inplace=True)\n",
+    "pivot_table_past_book = pivot_table_past_book.loc[(pivot_table_past_book != 0).sum(axis=1) >= 3]\n",
+    "\n",
+    "# Export DataFrames to separate Excel files\n",
+    "pivot_table_past_book.to_excel('Output/past_book.xlsx', index=True, header=True, engine='openpyxl')\n",
+    "pivot_table_future_book.to_excel('Output/future_book.xlsx', index=True, header=True, engine='openpyxl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Organic Bookings\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
